ec2.yaml
# created by jeison guerrero 
AWSTemplateFormatVersion: "2010-09-09"
Description: 'Cloudformation for VPC'
Parameters: {}
Resources:
  MyVPC: 
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: '172.16.0.0/16'
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC 
# Public Subnet AZ 1
  PublicSubnet1A:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.1.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags: 
        - Key: Name 
          Value: PublicSubnet1A
# Public App Private  AZ 1
  AppPrivateSubnet1A: 
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.2.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
# Public Data Privarcy Subnet AZ 1
  DataPrivateSubnet1A: 
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.3.0/24'
      AvailabilityZone: !Select [0, !GetAZs '']
      Tags: 
        - Key: Name 
          Value: DataPrivateSubnet1A
# Public Subnet AZ 2
  PublicSubnet2B:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.4.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags: 
        - Key: Name 
          Value: PublicSubnet2B
# Public App Private  AZ 1
  AppPrivateSubnet2B: 
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.5.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags: 
        - Key: Name 
          Value: AppPrivateSubnet2B 
# Public Data Privarcy Subnet AZ 1
  DataPrivateSubnet2B: 
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: '172.16.6.0/24'
      AvailabilityZone: !Select [1, !GetAZs '']
      Tags: 
        - Key: Name 
          Value: DataPrivateSubnet2B
# Internet Gateway 
  InterentGateway: 
   Type: 'AWS::EC2::InternetGateway'
   Properties:
     Tags: 
        - Key: Name
          Value:  MyVPC-IGW 
# Attach IGW  to the VPC 
  AttachGateway: 
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref MyVPC 
      InternetGatewayId: !Ref InterentGateway  
# Route Tables 
  PublicRouteTable: 
    Type: 'AWS::EC2::RouteTable'
    Properties: 
      VpcId: !Ref MyVPC
      Tags: 
        - Key: Name 
          Value: PublicRouteTable
#Routes 
  PublicRoutes: 
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties: 
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InterentGateway 
# Subnet Assocations 
  PublicSubnet1ARouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1A
      RouteTableId: !Ref PublicRouteTable
# Public Subnet 
  PublicSubnet2BRouteAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2B
      RouteTableId: !Ref PublicRouteTable
# Security Group for ALB
  MyALBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security group for Application Load Balancer
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: MyALBSecurityGroup
# Security Group for Web Server
  WebserverSecurtiyGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security group for Web Server
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: WebserverSecurtiyGroup
#Application Load Balancer 
  MyApplicationLoadBalancer:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    Properties:
      Name: MyApplicationLoadBalancer
      Subnets: 
        - !Ref PublicSubnet1A
        - !Ref PublicSubnet2B
      SecurityGroups: 
        - !Ref MyALBSecurityGroup
      Tags: 
        - Key: Name 
          Value: MyApplicationLoadBalancer
#Target Group for ALB
  MyTargetGroup: 
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      Name: MyTargetGroup
      Port: 80
      Protocol: HTTP
      VpcId: !Ref MyVPC
# Listener for ALB 
  MyListener: 
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref MyTargetGroup
      LoadBalancerArn: !Ref MyApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
# Web Server /ALB  Security Group 
  WebserverSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Enable HTTP Access'
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80 
          CidrIp: '0.0.0.0/0'
  WebServerInstance1A:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0c94855ba95c71c99 # Amazon Linux 2 AMI (HVM), SSD Volume Type
      SubnetId: !Ref PublicSubnet1A
      SecurityGroupIds:
       - !Ref WebserverSecurtiyGroup
      Tags:
       - Key: Name 
         Value: WebServerInstance1A
      UserData:
         Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "Hello from My Web Server 1A" > /var/www/html/index.html
#  WebServerInstance1B
  WebServerInstance1B:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0c94855ba95c71c99 # Amazon Linux 2 AMI (HVM), SSD Volume Type
      SubnetId: !Ref PublicSubnet2B
      SecurityGroupIds:
       - !Ref WebserverSecurtiyGroup
      Tags:
       - Key: Name 
         Value: WebServerInstance1B
      UserData:
         Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "Hello from My Web Server 1B" > /var/www/html/index.html
